--- a/style.css
+++ b/style.css
@@ -69,7 +69,17 @@ body {
     background-color:skyblue;
 }
 
+.popisek {
+    color: grey;
+    font-weight: bold;
+}
 
+.popisek-copy {
+    font-weight: lighter;
+}
+.popisek a {
+    color: grey;
+}
 
 /* FOTOGALERIE */
 .galerie {
@@ -77,9 +87,11 @@ body {
     flex-direction: column;
 }
 
-
-
 /* PATICKA */
 .paticka {
     background: linear-gradient(to bottom, lightgrey, white);
+    color: grey;
+}
+.paticka a {
+    color: grey;
 }
