--- a/style.css
+++ b/style.css
@@ -22,29 +22,35 @@ body {
 
 .titulek {
     font-family: 'Raleway', serif;
+    padding-top: 20px;
 }
 
 .perex {
     text-align: center;
+    padding: 20px;
 }
 .autor {
     font-style: italic;
+    padding: 20px;
 }
-.hlavicka {
-    background-image: url(images/island-hlavicka.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    color: white;
-    text-align: center;
-}
-.perex::after {
+.autor::before {
     content: "";
     display: block;
     width: 50px;
     height: 2px;
     background-color: azure;
-
+    margin: auto;
+    margin-bottom: 20px;
+}
+.hlavicka {
+    background-image:
+    radial-gradient(circle, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url('images/island-hlavicka.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    color: white;
+    text-align: center;
 }
 
 /* MENU */
@@ -52,6 +58,7 @@ body {
     list-style-type: none;
     text-align: center;
     text-transform: uppercase;
+    font-size: 14px;
 }
 .menu a {
     text-decoration: none;
@@ -61,17 +68,23 @@ body {
 
 
 /* OBSAH */
+.obsah {
+    display: flex;
+    flex-direction: column;
+}
 .nadpis::after {
     content: "";
     display: block;
     width: 70px;
     height: 5px; 
     background-color:skyblue;
+    margin-top: 20px;
 }
-
 .popisek {
     color: grey;
     font-weight: bold;
+    text-align: center;
+    font-size: 10px;
 }
 
 .popisek-copy {
@@ -85,13 +98,50 @@ body {
 .galerie {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 /* PATICKA */
 .paticka {
-    background: linear-gradient(to bottom, lightgrey, white);
+    background: linear-gradient(to bottom, rgba(109, 105, 105, 0.5), rgba(255, 255, 255, 0.5));
     color: grey;
+    padding: 20px;
+    padding-top: 30px;
+    font-size: 14px;
 }
 .paticka a {
     color: grey;
+}
+
+/*TABLET*/
+
+@media  screen and (min-width: 500px) {
+    .menu {
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .galerie {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    .foto img {
+        width: 100%;
+        transition: 0.3s;
+        display: block;
+    }
+    .foto {
+        position: relative;
+        overflow: hidden;
+    }
+   .foto .popisek {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    transition: 0.3s;
+    position: absolute;
+    margin: 0;
+   }
+   .foto:hover .popisek {
+    transform: translateY(-100%);
+   }
 }
