--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
     font-family: 'Merriweather', serif;
     font-size: 16px;
     line-height: 1.6;
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -68,10 +70,7 @@ body {
 
 
 /* OBSAH */
-.obsah {
-    display: flex;
-    flex-direction: column;
-}
+
 .nadpis::after {
     content: "";
     display: block;
@@ -144,4 +143,18 @@ body {
    .foto:hover .popisek {
     transform: translateY(-100%);
    }
+}
+
+/*PC*/
+@media  screen and (min-width: 1000px) {
+  .menu {
+    display: flex;
+    flex-direction: column;
+  }
+  .menuuvod {
+    display: flex;
+  }
+  .uvod {
+    flex-direction: column;
+  }
 }
