--- a/style.css
+++ b/style.css
@@ -65,8 +65,17 @@ body {
     text-decoration: none;
     color: grey;
 }
-
-
+.menu li {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+.menu a:hover,
+.menu a:active,
+.menu a:focus {
+    color: black;
+    font-weight: 700;
+}
 
 /* OBSAH */
 .obsah {
@@ -122,6 +131,7 @@ body {
         display: flex;
         justify-content: space-evenly;
     }
+
    .uvod  {
     margin: 0 20px 0 20px;
    }
@@ -177,10 +187,12 @@ body {
     margin-left: 20%;
   }
   .menu {
+    padding: 30px 30px 0 30px;
+  }
+  .menu li {
+    margin: 0;
+    padding: 0;
     text-align: left;
-    padding-right: 30px;
-    padding-left: 25px;
-    padding-top: 25px;
   }
   .uvod {
     flex-direction: column;
@@ -200,6 +212,9 @@ body {
     width: 70%;
     top: 355px;
     left: 20%;
+  }
+  .nadpis {
+    margin-left: 50px;
   }
   .proc {
     margin-left: 50px;
